--- a/assets/scss/components/_postbar.scss
+++ b/assets/scss/components/_postbar.scss
@@ -35,25 +35,69 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  padding-top: $spacing-xxs;
+  padding-bottom: $spacing-xxs;
   background-color: $color-gray-1;
+
+  &:before,
+  &:after {
+    content: ' ';
+    position: absolute;
+    z-index: $z-index-1;
+    display: block;
+    width: 100%;
+    height: 17px;
+  }
+
+  &:before {
+    top: 0;
+    left: 0;
+    background: url('#{$path-file-shares}/line-meta-top.svg') no-repeat;
+  }
+
+  &:after {
+    bottom: 0;
+    left: 0;
+    background: url('#{$path-file-shares}/line-meta-bottom.svg') no-repeat right;
+  }
 
   // Child element styles
   // >>>>>>>>>>>>>>>>>>>>>>>
-  .postbar-info,
+  .postbar-info {
+    display: flex;
+    align-items: stretch;
+    padding-left: $spacing-xxs;
+  }
+
   .postbar-action {
+    display: flex;
+    align-items: center;
     padding-left: $spacing-xxs;
     padding-right: $spacing-xxs;
   }
 
-  .postbar-info {
-    display: flex;
-    align-items: center;
-  }
-
   .postbar-segment {
+    &.is-logo {
+      flex: none;
+      margin-right: $spacing-tn;
+    }
+
     &.is-meta {
       display: flex;
+      flex-direction: column;
       flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: flex-start;
+      padding-top: 4px;
+    }
+
+    &.is-button {
+      margin-left: 7px;
+
+      &:first-child {
+        margin-left: 0;
+      }
     }
   }
 
@@ -62,13 +106,24 @@
   }
 
   .logo-outline {
-    margin-top: 3px;
+
   }
 
   .datetime {
     @extend #{$text-style-first-tn-bold};
-    width: 100%;
-    margin-top: 5px;
+    color: $color-gray-4;
+    white-space: nowrap;
+  }
+
+  .username {
+    @extend .is-ellipsis;
+    @extend #{$text-style-first-lg-bold};
+    color: $color-orange-1;
+  }
+
+  .shopname {
+    @extend .is-ellipsis;
+    @extend #{$text-style-first-sm-bold};
     color: $color-gray-4;
   }
 
@@ -77,9 +132,92 @@
 
   // Modifiers
   // >>>>>>>>>>>>>>>>>>>>>>>
+  &.is-light-theme {
+    background-color: $color-white;
+
+    &:before {
+      display: none;
+    }
+
+    .postbar-action {
+      &.is-single-button {
+        min-width: 104px;
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
+
+    .postbar-segment {
+      &.is-logo {
+        margin-right: 20px;
+      }
+
+      &.is-meta {
+        max-width: 290px;
+      }
+
+      &.is-meta-short {
+        max-width: 200px;
+      }
+    }
+  }
+
+  &.is-no-bottom-line {
+    &:after {
+      display: none;
+    }
+  }
 
   // States with modifiers
   // >>>>>>>>>>>>>>>>>>>>>>>
+
+  // Media queries
+  // >>>>>>>>>>>>>>>>>>>>>>>
+  .logo {
+    @media (max-width: $breakpoint-mobile-lg) {
+      width: 14vw;
+    }
+  }
+
+  .logo-outline {
+    @media (max-width: $breakpoint-mobile-lg) {
+      width: 21vw;
+    }
+  }
+
+  .datetime {
+    @media (max-width: $breakpoint-mobile-lg) {
+      font-size: 4vw; // 4.4
+    }
+  }
+
+  .username {
+    @media (max-width: $breakpoint-mobile-lg) {
+      font-size: 6.8vw;
+    }
+  }
+
+  .shopname {
+    @media (max-width: $breakpoint-mobile-lg) {
+      font-size: 5.8vw;
+    }
+  }
+
+  &.is-light-theme {
+    .postbar-segment {
+      &.is-meta {
+        @media (max-width: $breakpoint-mobile-lg) {
+          max-width: 70vw;
+        }
+      }
+
+      &.is-meta-short {
+        @media (max-width: $breakpoint-mobile-lg) {
+          max-width: 40vw;
+        }
+      }
+    }
+  }
 }
 
 // Browser variations
