--- a/assets/scss/layouts/_topbar.scss
+++ b/assets/scss/layouts/_topbar.scss
@@ -26,6 +26,24 @@
   max-width: $breakpoint-mobile-lg;
   margin: auto;
 
+  // Graphic line bottom for Topbar with info and point
+  &:after {
+    content: ' ';
+    position: absolute;
+    z-index: $z-index-2;
+    top: 100%;
+    right: calc(104px + 16px); // Point block width (104px) + Graphic (16px)
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: $color-orange-1;
+    // background: url('#{$path-file-shares}/line-topbar.svg') no-repeat;
+
+    @media (min-width: 415px) {
+      width: calc(414px - 121px);
+    }
+  }
+
   // Child element styles
   // >>>>>>>>>>>>>>>>>>>>>>>
   .topbar-info {
@@ -39,15 +57,53 @@
     padding-right: $spacing-xs;
   }
 
+  .topbar-back {
+    display: flex;
+    align-items: center;
+    width: calc(100% - 105px);
+    padding-top: 3px;
+    padding-left: $spacing-xxs;
+    padding-right: $spacing-xs;
+  }
+
   .topbar-point {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 105px;
+    position: relative;
+    min-width: 104px;
+    max-width: 104px;
     padding-left: $spacing-xs;
     padding-right: $spacing-xs;
     background-color: $color-orange-1;
+
+    // Graphic line bottom for Topbar with info and point
+    &:after {
+      content: ' ';
+      position: absolute;
+      z-index: $z-index-1;
+      top: 100%;
+      right: 100%;
+      width: 16px;
+      height: 10px;
+      background: url('#{$path-file-shares}/line-topbar-square-bottom.svg') no-repeat;
+    }
+
+    &.is-logo {
+      &:before {
+        @include translateY(-50%);
+        content: ' ';
+        position: absolute;
+        z-index: $z-index-1;
+        top: 50%;
+        right: 100%;
+        width: 58px;
+        height: 49px;
+        margin-right: 5px;
+        background: url('#{$path-file-logos}/logo-small.svg') no-repeat;
+      }
+    }
   }
 
   .topbar-segment {
@@ -69,11 +125,61 @@
     }
   }
 
+  .button-back {
+    margin-right: 30px;
+  }
+
   // States
   // >>>>>>>>>>>>>>>>>>>>>>>
 
   // Modifiers
   // >>>>>>>>>>>>>>>>>>>>>>>
+  &.is-title {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: $topbar-title-height;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    //  Graphic line bottom for Topbar title
+    &:before {
+      content: ' ';
+      position: absolute;
+      z-index: $z-index-2;
+      right: 0;
+      bottom: -3px;
+      display: block;
+      width: 16px;
+      height: 10px;
+      background: url('#{$path-file-shares}/line-topbar-square-top.svg') no-repeat;
+    }
+
+    &:after {
+      content: ' ';
+      position: absolute;
+      z-index: $z-index-2;
+      top: 100%;
+      right: initial;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 3px;
+      background-color: $color-orange-1;
+
+      @media (min-width: 415px) {
+        width: 100%;
+      }
+    }
+
+    .logo {
+      margin-right: 30px;
+    }
+
+    .title {
+
+    }
+  }
 
   // States with modifiers
   // >>>>>>>>>>>>>>>>>>>>>>>
