create modal for profile page and keep page

--- a/assets/scss/components/_modal.scss
+++ b/assets/scss/components/_modal.scss
@@ -156,6 +156,12 @@
 
   // States with modifiers
   // >>>>>>>>>>>>>>>>>>>>>>>
+  .modal-container {
+    @media (max-width: $breakpoint-mobile-lg) {
+      right: 20px;
+      left: 20px;
+    }
+  }
 
   .modal-button-confirm {
     .button {
